security configuration changes to allow new event creation

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,3 +30,7 @@ logging:
     org:
       springframework:
         security: DEBUG
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
